docs/tests/parser/edge_cases/valid/ComplexGenericStruct.src
struct Map<K, V> {
    let K key;
    let V value;
    fn V get(K k) {
        return value;
    }
}
