docs/tests/parser/edge_cases/invalid/GenericStructWithImplements.src
struct Box<T> : IContainer {
    let T value;
}
